Use Java 11 api for list, set and map